tests/compilefail23.out
[1mtests/compilefail23.pas:6:14: [0m[1m[91merror:[0m Undefined Identifier: 'd'
     6 | 	b := c + d;